--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles.css">
     <title>Flexbox</title>
 </head>
 
 <body>
     <div class="container">
         <h1 class="text-center display-4">Flexbox</h1>
-        <div>
+        <div class="border border-dark d-flex">
             <button class="btn btn-info btn-lg">LARGE</button>
             <button class="btn btn-warning">SMALL</button>
         </div>
