--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
 <body>
     <div class="container">
         <h1 class="text-center display-4">Flexbox</h1>
-        <div class="border border-dark d-flex">
+        <div class="border border-dark d-flex justify-content-start align-items-end">
             <button class="btn btn-info btn-lg">LARGE</button>
+            <button class="btn btn-primary">SMALL</button>
+            <button class="btn btn-warning">SMALL</button>
+        </div>
+        <div class="border border-dark d-flex flex-row-reverse justify-content-start align-items-end">
+            <button class="btn btn-info btn-lg">LARGE</button>
+            <button class="btn btn-primary">SMALL</button>
+            <button class="btn btn-warning">SMALL</button>
+        </div>
+        <div class="border border-dark d-flex flex-column justify-content-center">
+            <button class="btn btn-info btn-lg">LARGE</button>
+            <button class="btn btn-primary">SMALL</button>
             <button class="btn btn-warning">SMALL</button>
         </div>
     </div>
